[FIX] website: fix image alignment issue in gallery with links
Problem:
When adding a link to an image in an image gallery, the image
becomes left-aligned instead of centered. This is most noticeable
with images that have a small width.

Cause:
The image is centered using the `mx-auto` class. However, once the
image is wrapped in an anchor (`<a>`), the anchor does not take the
full width of the container. As a result, the image is no longer
centered and shifts to the left.

Steps to reproduce:
- Add an image gallery block
- Replace an image with one that has a small width
- Add a link to the image
- The image is no longer centered and aligns to the left

opw-4985504

--- a/addons/website/static/src/snippets/s_image_gallery/002.scss
+++ b/addons/website/static/src/snippets/s_image_gallery/002.scss
@@ -101,6 +101,12 @@
                 height: var(--snippet-preview-height, 100%);
             }
 
+            .carousel-item {
+                > a {
+                    width: 100%;
+                }
+            }
+
             .media_iframe_video {
                 // 70% because the carousel controls are each 15% and the user
                 // must be able to click on the video buttons.
